# claude-code-analyst

./: CLAUDE.md  README.md  config.yml  main.py  planets_table.md  pyproject.toml
.claude/commands/: app.md  download_html.md  guide.md  mermaid.md  project.md  readme.md
.obsidian/: workspace.json
apps/: README.md  __init__.py  chat.py  example_chat.py  proposal.py  proposal_backup.py  proposal_old.py
apps/agent/: __init__.py  auth.py  client.py  mcp.py  session.py  subagents.py  tools.py
apps/llm_report_chatbot/: README.md  __init__.py  llm_report_chatbot.py  test_chatbot.py
apps/markdown_chat/: config.yml  run.py
apps/markdown_chat_textual/: run.py
backlog/: active-backlog.md
docs/: README.md  article-to-md-guide.md  aws-ai-proposal-generator-guide.md  chat.md  html-downloader-guide.md  mermaid-visualization-guide.md
html/building-effective-ai-agents-anthropic/: index.html
html/the-big-llm-architecture-comparison/: index.html
html_test/the-big-llm-architecture-comparison/: index.html
markdown/america-is-missing-the-new-labor-economy-robotics-part-1-semianalysis/: article.md
markdown/building-effective-ai-agents-anthropic/: article.md
markdown/example-domain/: article.md
markdown/h100-vs-gb200-nvl72-training-benchmarks-power-tco-and-reliability-analysis-software-improvement-over-time-semianalysis/: article.md
markdown/meta/: 10k-2025.md
markdown/microsoft/: 10k-2025.md
markdown/robotics-levels-of-autonomy-semianalysis/: article.md
markdown/the-big-llm-architecture-comparison/: article.md
markdown/walmart-inc/: 10k-2025.md
scripts/: 10k_tech.py  article_to_md.py  html_downloader.py
specs/: pitch.md  proposal.md
(+59 files in other folders)
