[project]
name = "claude-code-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.12.0",
    "readability-lxml>=0.8.1",
    "pyyaml>=6.0",
    "mermaid-mcp>=0.1.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "claude-code-sdk>=0.0.20",
    "anyio>=4.0.0",
    "rich>=14.1.0",
    "textual>=1.0.0",
]
