[project]
name = "claude-code-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.12.0",
    "readability-lxml>=0.8.1",
    "pyyaml>=6.0",
    "mermaid-mcp>=0.1.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "streamlit>=1.40.0",
    "claude-code-sdk>=0.0.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.4",
    "pytest-timeout>=2.3.1",
    "mypy>=1.14.1",
    "black>=24.11.0",
    "pytest>=8.3.5",
    "ipdb>=0.13.13",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
timeout = 300
